[tool.poetry]
name = "supplychain-simulation"
version = "0.1.0"

description = ""
authors = ["Luuk Gijben <l.gijben@chain-stock.com>","Allex Veldman <a.veldman@chain-stock.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.4.0"
pylint = "^2.11.1"
safety = "^1.10.3"
pre-commit = "^2.15.0"
mypy = "^0.910"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.mypy]
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
strict_equality = false
disallow_untyped_calls = false
